# xtp

./: CMakeCache.txt  FileUtils.h  Makefile  cmake_install.cmake  config.json  linux_main  makefile  quote_spi.cpp  quote_spi.h  testmain  trade_spi.cpp  trade_spi.h  xtp_api_demo.cpp
api/: XTPApiDemo  config.json  xoms_api_fund_struct.h  xoms_api_struct.h  xquote_api_struct.h  xtp_api_data_type.h  xtp_quote_api.h  xtp_trader_api.h
api/log/: 1523507010order.txt
api/log/log/: quote.log.20180412  trade.log.20180412
lib/: xtpquoteapi.lib  xtptraderapi.lib
log/: 1401752order.txt  14233253order.txt  1523625118order.txt  1523626087order.txt  1523626202order.txt
log/log/: quote.log.20180413  trade.log.20180413
src/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  Makefile  cmake_install.cmake  quote_spi.cpp  quote_spi.h  trade_spi.cpp  trade_spi.h  xtp_api_demo.cpp
